# alicatlib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: benchmarks.md  commands.md  data-frames.md  design.md  devices.md  index.md  installation.md  logging.md  migration.md  quickstart-async.md  quickstart-sync.md  safety.md  streaming.md  testing.md  troubleshooting.md
docs/api/: alicatlib.md  commands.md  config.md  devices.md  errors.md  firmware.md  index.md  manager.md  protocol.md  registry.md  sinks.md  streaming.md  sync.md  testing.md  transport.md
examples/: 01_read_once_sync.py  02_setpoint_and_hold_sync.py  03_gas_select_sync.py  04_multi_device_csv_sync.py  05_async_basic.py  06_async_streaming.py  07_async_multi_device_sqlite.py  08_discover_ports.py  09_offline_with_fake_transport.py  README.md
scripts/: bench_query.py  bench_sinks.py  diag_capture.py  gen_codes.py
src/alicatlib/: __init__.py  _logging.py  _runtime.py  config.py  errors.py  firmware.py  manager.py  testing.py  version.py
src/alicatlib/commands/: __init__.py  _firmware_cutoffs.py  base.py  catalog.py  control.py  data_readings.py  display.py  gas.py  loop_control.py  output.py  polling.py  setpoint.py  streaming.py  system.py  tare.py  totalizer.py  units.py  user_data.py  valve.py
src/alicatlib/devices/: __init__.py  _controller.py  _eeprom_wear.py  base.py  data_frame.py  discovery.py  factory.py  flow_controller.py  flow_meter.py  kind.py  medium.py  models.py  pressure_controller.py  pressure_meter.py  session.py  streaming.py
src/alicatlib/protocol/: __init__.py  client.py  framing.py  parser.py
src/alicatlib/registry/: __init__.py  _codes_gen.py  aliases.py  gases.py  loop_control.py  statistics.py  units.py
src/alicatlib/registry/data/: codes.json
src/alicatlib/sinks/: __init__.py  _schema.py  base.py  csv.py  jsonl.py  memory.py  parquet.py  postgres.py  sqlite.py
src/alicatlib/streaming/: __init__.py  recorder.py  sample.py
src/alicatlib/sync/: __init__.py  device.py  discovery.py  manager.py  portal.py  recording.py  sinks.py
src/alicatlib/transport/: __init__.py  base.py  fake.py  serial.py
tests/: _typing.py  conftest.py
tests/fixtures/: device_matrix.yaml
tests/fixtures/responses/: dataframe_format_6v.txt  dataframe_format_7v.txt  dataframe_format_mc.txt  dataframe_format_meter_v10.txt  dataframe_format_v1_v7.txt  dataframe_format_v8.txt  dataframe_format_v8v9_late.txt  engineering_units_mc.txt  full_scale_mc.txt  gas_list_mc.txt  gas_select_legacy_n2.txt  gas_select_n2.txt  identify_mc_happy.txt  loop_control_variable_mc.txt  manufacturing_info_mc.txt  manufacturing_info_v1_v7.txt  manufacturing_info_v8.txt  poll_mc.txt  poll_meter_v10.txt  poll_v1_v7.txt  poll_v8.txt  request_data_dv.txt  setpoint_legacy_set_mc.txt  setpoint_query_divergent.txt  setpoint_query_mc.txt  setpoint_set_mc.txt  setpoint_source_mc.txt  tare_absolute_pressure_mc.txt  tare_flow_mc.txt  tare_gauge_pressure_mc.txt  ve_gp.txt  ve_v10.txt  ve_v8.txt
tests/integration/: conftest.py  test_hardware_gas_list.py  test_hardware_gas_select.py  test_hardware_lifecycle.py  test_hardware_read_only.py  test_hardware_setpoint.py  test_hardware_tare.py  test_hardware_units.py
tests/unit/: _sink_fixtures.py  test_command_base.py  test_command_end_to_end.py  test_config.py  test_control_commands.py  test_data_frame.py  test_data_readings_commands.py  test_device_facade.py  test_device_matrix.py  test_device_models.py  test_discovery.py  test_errors.py  test_factory.py  test_firmware.py  test_gas_legacy.py  test_gas_select.py  test_import.py  test_loop_control_command.py  test_manager.py  test_observability.py  test_parquet_sink.py  test_polling.py  test_postgres_sink.py  test_pressure_controller_facade.py  test_protocol_client.py  test_protocol_parser.py  test_recorder.py  test_registry.py  test_request_data.py  test_runtime.py  test_session.py  test_session_lifecycle.py  test_setpoint_commands.py  test_sinks.py  test_specialty_commands.py  test_specialty_facade.py  test_sqlite_sink.py  test_streaming_command.py  test_streaming_runtime.py  test_sync_device.py  (+15 more)
